no-services/pacman/1.0.0/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman
  name: pacman
  namespace: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pacman
  template:
    metadata:
      labels:
        name: pacman
    spec:
      serviceAccount: pacman
      containers:
        - image: tuxtof/pacman:1.0.0
          name: pacman
          ports:
            - containerPort: 8080
              name: http-server
